<resources>
    <string name="app_name">Meal Planner application</string>
    <string name="title_activity_2">activity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login, signup or continue as a guest</string>
    <string name="loginbtn">Login</string>
    <string name="signupbtn">Sign up</string>
    <string name="guest_logintxt">Or continue as a guest</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="required">Required field</string>
    <string name="password">Password</string>
    <string name="meal">Meal of the day</string>
    <string name="logout">Log out</string>
    <string name="breakfast">Breakfast</string>
    <string name="launch">Launch</string>
    <string name="dinner">Dinner</string>
    <string name="ingredients">"Ingredients "</string>
    <string name="intstructions">Instructions</string>
    <string name="popupTxt">Save meal to plan</string>
    <string name="backup">BackUp</string>
    <string name="restore">Restore</string>
    <string name="category_title">Categories</string>
    <string name="Region">Region</string>
    <string name="seemore">See More</string>
    <string name="meals">Meals</string>
    <string name="login_failed_wrong_email_or_password">Login Failed, wrong email or password</string>
    <string name="email_is_required">Email is required</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password_is_required">Password is required</string>
    <string name="google_sign_in_failed">"Google Sign-In failed: "</string>
    <string name="users">users</string>
    <string name="documentsnapshot_added_with_id">"DocumentSnapshot added with ID: "</string>
    <string name="error_adding_document">Error adding document</string>
    <string name="error">Error</string>
    <string name="breakfastdb">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="please_login_to_make_or_view_meal_plans">Please login to make or view meal plans</string>
    <string name="guest">guest</string>
    <string name="no_meals_found_err">No meals found</string>
    <string name="please_select_a_day_and_a_meal_type">Please select a day and a meal type</string>
    <string name="mealsaved">Meal Saved</string>
    <string name="nationality">Nationality : </string>
    <string name="category">Category : </string>
    <string name="no_fav">No Favourites Found</string>
    <string name="no_fav_guest">Login to use the app</string>
    <string name="sign_up_or_sign_in_to_view_your_profile">Sign up or sign in to view your profile</string>

</resources>